# ARC-AGI-3-Engine

./: .env.example  .gitignore  README.md
backend/: backend.py  game_data_loader.py  proxy.py  pyproject.toml  requirements.txt
backend/game_data/ft09-16726c5b26ff/level_1/: final.json  initial.json
frontend/: index.html  play.html  serve_static.py
