[project]
name = "arc-agi-3-engine"
version = "0.1.0"
description = "ARC-AGI-3 Engine API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.6",
    "pillow>=11.2.1",
    "numpy>=1.24.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.25.0",
    "ruff>=0.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"] 